--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 /node_modules
 /public/hot
+/public/backend/database/1_survey.sql
 /public/backend/database/2_survey.sql
+/public/backend/database/3survey.sql
 /public/backend/database/4_survey.sql
 /public/backend/database/5_survey.sql
 /public/backend/database/6_survey.sql
 /public/backend/database/7_survey.sql
 /public/backend/database/users.sql
+/public/backend/database/users_new.sql
+/public/backend/database/password.sql
 /public/storage
 /storage/*.key
 /vendor
