--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nBRWc49jlvsTIzVo7dr2tB5d+Q4jzIjsEMSniTRSaUM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -28,13 +28,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=SSE@delicias.tecnm.mx
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=SSE@delicias.tecnm.mx
+MAIL_FROM_NAME="S.S.E"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
